package ca.mcmaster.se2aa4.island.team45.decision_stages;

public class PreviousDecision {
    private String prevAction;
    private String prevHeading;

    public String getPrevAction() {
        return prevAction;
    }

    public void setPrevAction(String prevAction) {
        this.prevAction = prevAction;
    }

    public String getPrevHeading() {
        return prevHeading;
    }

    public void setPrevHeading(String prevHeading) {
        this.prevHeading = prevHeading;
    }
}